Fix card vertical alignment

--- a/src/apps/Game/CAH/styles.css
+++ b/src/apps/Game/CAH/styles.css
@@ -77,6 +77,7 @@
 .playedCards > div {
   display: inline-block;
   white-space: normal;
+  vertical-align: top;
 }
 .playedCards > button {
   vertical-align: top;
@@ -84,6 +85,7 @@
   text-align: left;
   border-radius: 1rem;
   white-space: normal;
+  vertical-align: top;
 }
 .playedCards > div:last-child,
 .playedCards > button:last-child {
